creusot/tests/should_fail/bad_borrow.stderr
error[E0499]: cannot borrow `x` as mutable more than once at a time
 --> bad_borrow.rs:4:13
  |
3 |     let a = &mut x;
  |             ------ first mutable borrow occurs here
4 |     let b = &mut x;
  |             ^^^^^^ second mutable borrow occurs here
5 |
6 |     *a += *b;
  |     -------- first borrow later used here

warning: load the `creusot_contract` crate to enable resolution of mutable borrows.

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0499`.
